--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vitejs-stack-mern-quickstart",
-  "description": "This is a quick start project template that combines the power of Vite.js and the MERN (MongoDB, Express, React, Node.js) stack. It provides a solid foundation for building modern web applications with a fast development experience.",
-  "author": "Tox",
+  "name": "memorify",
+  "description": "",
+  "author": "Jashan",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
