--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,11 @@
   "author": "Tox",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4"
   },
