--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,15 @@
     "sass": "sass --watch ./src/index.scss:./src/style/style.css"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0",
+    "@types/react-bootstrap": "^0.32.35",
+    "@types/styled-components": "^5.1.32",
+    "bootstrap": "^5.3.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
