--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prettier": "^3.0.0"
   },
   "scripts": {
-    "dev": "concurrently \"cd server && nodemon server.js\" \"cd client && yarn run dev\" \"cd client && yarn run sass\"",
-    "dev-client": "concurrently \"cd client && yarn run dev\" \"cd client && yarn run sass\""
+    "dev": "concurrently \"cd server && nodemon server.js\" \"cd client && npm run dev\"",
+    "dev-client": "concurrently \"cd client && npm run dev\""
   }
 }
