--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
   "author": "Tox",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-iam": "^3.465.0",
+    "@aws-sdk/client-s3": "^3.465.0",
+    "aws-sdk": "^2.1510.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -13,6 +16,5 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4"
-  },
-  "devDependencies": {}
+  }
 }
